Fixes webcam preview not showing

--- a/base.css
+++ b/base.css
@@ -1009,7 +1009,6 @@
   background-color: var(--bg6);
 }
 .layer-3QrUeG[aria-label*=SETTINGS] .contentRegion-3nDuYy .previewOverlay-2O7_KC, .layer-3QrUeG[aria-label*=RTC] .contentRegion-3nDuYy .previewOverlay-2O7_KC {
-  background-color: var(--bg4);
   border: none;
 }
 .layer-3QrUeG[aria-label*=SETTINGS] .contentRegion-3nDuYy .wrapper-3Z-vWm, .layer-3QrUeG[aria-label*=RTC] .contentRegion-3nDuYy .wrapper-3Z-vWm {
